# Code2College_2022_Wave5

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .pylintrc  .replit  README.md  pyproject.toml  setup.cfg
src/C2C/lession1/: sample.py
